# ClapWorkbenchSDK

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: build-macos.yml  build.yml
